src/objects/APTS_Batch_Error__c.object
<CustomObject>
    <description>Custom Object to store the error messages encountered during Pricing and Product Batch processes. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <description>Field to store Error Description. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Error Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Details_Description__c</fullName>
        <label>Error Details Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Level__c</fullName>
        <description>Field to store Error Level. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Error Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Error_Name__c</fullName>
        <description>Field to store Error Name. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Error Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_ID__c</fullName>
        <description>Field to store Parent Record ID. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Object_Name__c</fullName>
        <description>Field to store Parent Object Name. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Parent Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RTR_Batch_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RTR Batch Job</label>
        <referenceTo>RTR_Batch_Job__c</referenceTo>
        <relationshipLabel>Batch Errors</relationshipLabel>
        <relationshipName>Batch_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Job_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Job Execution</label>
        <referenceTo>APTS_Batch_Job_Execution__c</referenceTo>
        <relationshipLabel>Batch Errors</relationshipLabel>
        <relationshipName>Batch_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Date_Time__c</fullName>
        <label>Error Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Batch Error</label>
    <listViews>
        <fullName>All_Batch_Error_Records</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Error_Date_Time__c</columns>
        <columns>Batch_Job_Execution__c</columns>
        <columns>APTS_Error_Description__c</columns>
        <columns>APTS_Error_Level__c</columns>
        <columns>APTS_Error_Details_Description__c</columns>
        <columns>APTS_Error_Name__c</columns>
        <columns>APTS_Parent_ID__c</columns>
        <columns>APTS_Parent_Object_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Batch Error Records 13.01.2019</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pricing_Batch_All_Errors</fullName>
        <columns>NAME</columns>
        <columns>Error_Date_Time__c</columns>
        <columns>APTS_Error_Description__c</columns>
        <columns>APTS_Error_Details_Description__c</columns>
        <columns>APTS_Error_Level__c</columns>
        <columns>APTS_Error_Name__c</columns>
        <columns>APTS_Parent_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Error_Name__c</field>
            <operation>startsWith</operation>
            <value>Pric</value>
        </filters>
        <label>Pricing Batch - All Errors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BE-{00000000}</displayFormat>
        <label>Batch Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>